--- a/index.ipynb
+++ b/index.ipynb
@@ -39,9 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.6/site-packages (0.23.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /opt/conda/lib/python3.6/site-packages (from pandas) (2.7.3)\n",
+      "Requirement already satisfied: pytz>=2011k in /opt/conda/lib/python3.6/site-packages (from pandas) (2018.5)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in /opt/conda/lib/python3.6/site-packages (from pandas) (1.14.2)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil>=2.5.0->pandas) (1.11.0)\n",
+      "\u001b[31mmkl-random 1.0.1 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[31mmkl-fft 1.0.2 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: xlrd in /opt/conda/lib/python3.6/site-packages (1.1.0)\n",
+      "\u001b[31mmkl-random 1.0.1 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[31mmkl-fft 1.0.2 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas\n",
     "!pip install xlrd"
@@ -49,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,51 +89,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Area': 4758,\n",
-       "  'City': 'Buenos Aires',\n",
+       "[{'City': 'Buenos Aires',\n",
        "  'Country': 'Argentina',\n",
-       "  'Population': 2891000},\n",
-       " {'Area': 2731571,\n",
-       "  'City': 'Toronto',\n",
+       "  'Population': 2891000,\n",
+       "  'Area': 4758},\n",
+       " {'City': 'Toronto',\n",
        "  'Country': 'Canada',\n",
-       "  'Population': 2800000},\n",
-       " {'Area': 3194,\n",
-       "  'City': 'Pyeongchang',\n",
+       "  'Population': 2800000,\n",
+       "  'Area': 2731571},\n",
+       " {'City': 'Pyeongchang',\n",
        "  'Country': 'South Korea',\n",
-       "  'Population': 2581000},\n",
-       " {'Area': 200, 'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850},\n",
-       " {'Area': 491,\n",
-       "  'City': 'Albuquerque',\n",
+       "  'Population': 2581000,\n",
+       "  'Area': 3194},\n",
+       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
+       " {'City': 'Albuquerque',\n",
        "  'Country': 'New Mexico',\n",
-       "  'Population': 559277},\n",
-       " {'Area': 3750,\n",
-       "  'City': 'Los Cabos',\n",
+       "  'Population': 559277,\n",
+       "  'Area': 491},\n",
+       " {'City': 'Los Cabos',\n",
        "  'Country': 'Mexico',\n",
-       "  'Population': 287651},\n",
-       " {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554},\n",
-       " {'Area': 8300,\n",
-       "  'City': 'Archipelago Sea',\n",
+       "  'Population': 287651,\n",
+       "  'Area': 3750},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       " {'City': 'Archipelago Sea',\n",
        "  'Country': 'Finland',\n",
-       "  'Population': 60000},\n",
-       " {'Area': 33,\n",
-       "  'City': 'Walla Walla Valley',\n",
+       "  'Population': 60000,\n",
+       "  'Area': 8300},\n",
+       " {'City': 'Walla Walla Valley',\n",
        "  'Country': 'USA',\n",
-       "  'Population': 32237},\n",
-       " {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000},\n",
-       " {'Area': 59, 'City': 'Solta', 'Country': 'Croatia', 'Population': 1700},\n",
-       " {'Area': 672,\n",
-       "  'City': 'Iguazu Falls',\n",
+       "  'Population': 32237,\n",
+       "  'Area': 33},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
+       " {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       " {'City': 'Iguazu Falls',\n",
        "  'Country': 'Argentina',\n",
-       "  'Population': 0}]"
+       "  'Population': 0,\n",
+       "  'Area': 672}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,11 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-4d643e74f41e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'City'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m## x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
    "source": [
-    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
+    "x_values = cities[0:4]['City']\n",
+    "## x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
    ]
   },
   {
@@ -194,10 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]"
@@ -212,9 +244,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"4bbb31d9-78e9-4b91-abc9-734703428f51\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4bbb31d9-78e9-4b91-abc9-734703428f51\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"4bbb31d9-78e9-4b91-abc9-734703428f51\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4bbb31d9-78e9-4b91-abc9-734703428f51\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace_first_three_pops = {'x': x_values, 'y': y_values}\n",
     "\n",
@@ -246,28 +308,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "text_values = x_values\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'x': x_values, 'y': y_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bar'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bar_trace_first_three_pops['type'] # 'bar'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"117c9d2a-03a7-479e-9601-166fe89a1802\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"117c9d2a-03a7-479e-9601-166fe89a1802\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"117c9d2a-03a7-479e-9601-166fe89a1802\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"117c9d2a-03a7-479e-9601-166fe89a1802\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
@@ -288,19 +397,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "z_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': z_values, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'x': x_values, 'y': y_values}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        },
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          4758,
+          2731571,
+          3194
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"85eedcb4-4b6a-4f75-a3e4-60f462ae124b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"85eedcb4-4b6a-4f75-a3e4-60f462ae124b\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}, {\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"85eedcb4-4b6a-4f75-a3e4-60f462ae124b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"85eedcb4-4b6a-4f75-a3e4-60f462ae124b\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}, {\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
@@ -316,6 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "In this section, we saw how we use data visualizations to better understand the data.  We do the following.  Import plotly:\n",
     "\n",
     "\n",
@@ -333,6 +498,13 @@
     "    \n",
     "Easy peasy, quick and easy!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
